<resources>
    <string name="app_name">CarAssistantAI</string>
    <string name="app_intro">Hello! I am your smart assistant. I can listen to your voice or text commands, analyze them, and perform various tasks."</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message</string>
    <string name="tell_me_a_joke">Tell me a joke.</string>
    <string name="how_can_i_help_you">How can I help you?</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="chat_car">Chat Car</string>
    <string name="send_message">Send message</string>
    <string name="microphone">microphone</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyBGhKZdJXpWbFmCyUAgeN6o9kbAnts0fDs</string>
    <string name="start">Start</string>
    <string name="assistant">Assistant</string>
    <string name="ai_car">AI</string>
    <string name="welcome">Welcome</string>
    <string name="car_image">Car image</string>
    <string name="modelName">gemini-1.5-flash</string>
    <string name="overlay_permission_dialog">OverlayPermissionDialog</string>
    <string name="floating_window_service_started">Floating window service started</string>
    <string name="floating_window_service_stopped">Floating window service stopped</string>
    <string name="overlay_permission_needed">Overlay permission is needed to display the floating window</string>
    <string name="main_activity_on_resume">MainActivity onResume</string>
    <string name="main_activity_on_pause">MainActivity onPause</string>
    <string name="main_activity_on_new_intent">MainActivity onNewIntent</string>
    <string name="overlay_permission_granted">Overlay permission granted</string>
    <string name="record_audio_permission_granted">Record audio permission granted</string>
    <string name="record_audio_permission_needed">Record audio permission is needed to use the speech recognition feature</string>
    <string name="record_audio_permission_already_granted">Record audio permission is already granted</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_permission_needed">Location permission is needed to use the location-based features</string>
    <string name="main_activity_on_start">MainActivity onStart</string>
    <string name="main_activity_on_stop">MainActivity onStop</string>
    <string name="listening_to_you">Listening to you…</string>
    <string name="speech_recognition_unavailable">Speech recognition is not available on this device.</string>
    <string name="microphone_permission_not_granted">Microphone permission not granted.</string>
    <string name="voice_assistant">Voice Assistant</string>
    <string name="listening_for_voice_input">Listening for voice input</string>
    <string name="speak_now">Say something</string>
    <string name="tts_language_not_supported">Dil desteklenmiyor.</string>
    <string name="tts_initialization_failed">TextToSpeech başlatılamadı.</string>
    <string name="no_query_specified_for_youtube">No query specified for YouTube search.</string>
    <string name="no_destination_specified">You did not specify your destination.</string>
    <string name="no_search_query_specified">You did not specify where you wanted to search.</string>
    <string name="no_contact_specified">You did not specify who you wanted to call.</string>
    <string name="insufficient_message_info">You did not give me enough information to send a message.</string>
    <string name="alarm_set_for">Alarm set for %1$d:%2$d</string>
    <string name="invalid_alarm_time_format">Invalid time format for alarm.</string>
    <string name="could_not_understand_alarm_time">Could not understand the alarm time.</string>
    <string name="no_instagram_profile_specified">You did not specify the Instagram profile.</string>
    <string name="command_not_recognized">Command not recognized.</string>
    <string name="alarm_app_not_found">Alarm application not found</string>
    <string name="stopwatch_started"> Stopwatch started</string>
    <string name="stopwatch_app_not_found"> Stopwatch application not found</string>
    <string name="timer_set_for">Timer set for %1$d minutes and %2$d seconds</string>
    <string name="timer_app_not_found">Timer application not found</string>
    <string name="no_timer_duration_specified">You did not specify the duration of the timer.</string>
    <string name="keep_opened">Google Keep opened</string>
    <string name="keep_app_not_found">Google Keep app not found</string>
    <string name="keep_opened_web">Google Keep opened in web</string>
    <string name="keep_opened_with_note">Google Keep opened with note</string>
    <string name="no_note_content_specified">Google Keep note content not specified</string>
    <string name="error_opening_spotify_app">An error occurred while opening the Spotify app.</string>
    <string name="unexpected_error">An unexpected error occurred.</string>
    <string name="error_opening_spotify_web_app">An unexpected error occurred while opening the Spotify web app.</string>
    <string name="error_searching_spotify_app">An error occurred while searching in the Spotify app.</string>
    <string name="error_opening_instagram_app">An error occurred while opening the Instagram app.</string>
    <string name="unexpected_error_instagram_app">An unexpected error occurred while opening the Instagram app.</string>
    <string name="error_opening_instagram_web_app">An unexpected error occurred while opening the Instagram web app.</string>
    <string name="unexpected_error_instagram_profile">An unexpected error occurred while opening the Instagram profile.</string>
    <string name="error_opening_twitter_app">An error occurred while opening the Twitter app.</string>
    <string name="invalid_command">Invalid Command</string>
    <string name="no_message_specified">message not specified</string>
    <string name="google_search_uri">Google Search URI: %1$s</string>
    <string name="web_intent">Web Intent: %1$s</string>
    <string name="web_intent_started_successfully">Web intent started successfully</string>
    <string name="google_search_app_not_found">Google Search application not found</string>
    <string name="no_results_found">No results found</string>
    <string name="no_query_specified">No query specified</string>
    <string name="no_app_found_to_open_link">No app found to open the link</string>
    <string name="camera_app_not_found">Camera application not found.</string>
    <string name="invalid_view_type">Invalid view type</string>
    <string name="permissions_not_granted">Necessary authorisations were not granted</string>
    <string name="storage_permissions_not_granted">The necessary permits were not granted.</string>
    <string name="google_photos_not_installed">Google Photos app not installed.</string>
    <string name="contact_message_sending">a message is being sent to his contact.</string>
    <string name="contact_not_found">No one named %1$s was found in the directory.</string>
    <string name="contact_calling">Calling %1$s…</string>
    <string name="no_email_app_found">No email app found to open. Trying to open web mail…</string>
    <string name="unexpected_error_email_app">An unexpected error occurred while opening the email app.</string>
    <string name="no_email_or_browser_found">No email app or web browser found to open the web mail.</string>
    <string name="no_browser_found_log">No web browser found to open the web mail.</string>
    <string name="unexpected_error_web_mail">An unexpected error occurred while opening the web mail.</string>
    <string name="unexpected_error_web_mail_log">An unexpected error occurred while opening the web mail</string>
    <string name="google_maps_not_installed">Google Maps app is not installed</string>
    <string name="no_place_type_specified">No place type specified</string>
    <string name="whatsapp_not_found">WhatsApp app not found</string>
    <string name="destination">Destination</string>
    <string name="encode_des">Encode destination</string>
    <string name="gemini_response">GeminiResponse</string>
    <string name="received_response">Received Response:</string>
    <string name="an_error_occurred">An error occurred:</string>
    <string name="choose_email_app">Choose email app</string>
    <string name="voice_assistant_channel_name">Voice Assistant Service Channel</string>
    <string name="voice_assistant_listening">Listening for voice input</string>
    <string name="voice_assistant_no_results">No results recognized</string>
    <string name="voice_assistant_recognized">Recognized: %1$s</string>
    <string name="say_something">Say something</string>
    <string name="voice_assistant_title">Voice Assistant</string>
    <string name="start_listening_command">Start listening</string>
    <string name="start_listening_from_error_no_match">Listening from ERROR_NO_MATCH</string>
    <string name="start_listening_from_results">Listening from onResults</string>
</resources>