<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.chat.ChatBotFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_car"
        android:textSize="24sp"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:background="@color/text_color"
        android:textColor="@color/background_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:visibility="gone"
        tools:listitem="@layout/item_message"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@id/messageInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/questionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@id/messageInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/text_color">

            <TextView
                android:id="@+id/textViewQuestion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/what_is_your_name"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/text_color">

            <TextView
                android:id="@+id/textViewQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/how_can_i_help_you"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/text_color">

            <TextView
                android:id="@+id/textViewQuestion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/tell_me_a_joke"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messageInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:background="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autofillHints="Type a message"
            android:hint="@string/type_a_message"
            android:background="@drawable/edit_text_background"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="text" />

        <ImageView
            android:id="@+id/buttonSend"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/round_button_background"
            android:contentDescription="@string/send_message"
            android:padding="10dp"
            android:src="@drawable/icon_send_24"
            android:layout_marginStart="4dp" />

        <ImageView
            android:id="@+id/buttonMic"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/round_button_background"
            android:contentDescription="@string/microphone"
            android:padding="10dp"
            android:src="@drawable/icon_mic"
            android:layout_marginStart="4dp" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>